replaced tooltip PNG by a JPG to reduce the size from ~500k to 50k

--- a/server/src/main/resources/static/less/styles.less
+++ b/server/src/main/resources/static/less/styles.less
@@ -276,7 +276,7 @@ a:focus,
 }
 
 .attributes .panel-body {
-  background: url('/static/images/tooltip_bg.png') no-repeat center center;
+  background: url('/static/images/tooltip_bg.jpg') no-repeat center center;
   color: #fff;
 }
 
